src/css/general/theme.css
/* ... */
/* End Data Blocks Card Styling */

/* Icon Styles */
.delete-icon:hover {
    color: #bb0000;
}

/* TODO: Create general table dropdown, but for now use this*/
.tableDropdown {
    min-width: 250px;
}

.multi-input-button {
    width: 32px;
}

/* Breadcrumb trail styling */
.breadcrumb {
    background-color: #fafafb;
    border-radius: .5rem;
}

/* End Breadcrumb trail styling */

/* Action Bar styling */
.action-bar-icon:hover {
    color: #3D3B36;
}

/* End Action Bar styling */

.max-content-height {
    height: 100%;
    max-height: 100%;
}

/* Detail View Styling */
.table-card-panel {
    background-color: #fafafb;
}

.detail-view-body {
    min-height: 60vh;
}

.detail-container-body {
    min-height: calc(100vh - 255px);
    /*max-height: calc(100vh - 255px);*/
}

.modal-detail-view-body {
    min-height: 80vh;
    max-height: 80vh;
    overflow-y: auto;
}

.detail-panel-body {
    min-height: calc(92vh - 275px);
    /*max-height: calc(92vh - 275px);
    overflow-y: auto;*/
}

.page-description {
    background-color: #FCFCFC;
    min-height: 2em;
}

.shaded-panel {
    /*border-radius: 5px;*/
    background-color: #FCFCFC;
}

.shaded-container {
    background-color: #e6e5e3;
}

/* End Detail View Styling */

/* Status Card Styling */
.statusCard {
    min-height: 50px;
}

.status-legend {
    background-color: rgba(203, 205, 205, 0.1);
    border-radius: 5px 5px 0 0;
}

.status-table {
    background-color: rgba(203, 205, 205, 0.1);
    border-radius: 5px 5px 5px 5px;
}

/* End Status Card Styling */

/* Pagination Container Styling */
.pagination-container .top-pagination {
    background-color: #F3F3F1;
    border-collapse: collapse;
    border-top: 1px solid #e4e4e4;
    border-bottom: 1px solid #e4e4e4;
}

.top-pagination .page-sort {
    width: 150px;
}

.top-pagination .page-size {
    width: 150px;
}

.bottom-pagination .results-summary {
    min-width: 150px;
    padding-top: 5px;
    padding-bottom: 5px;
}

.pagination-container .bottom-pagination {
    background-color: #F3F3F1;
    border-collapse: collapse;
    border-top: 1px solid #e4e4e4;
}

/* End Pagination Container Styling */

/* Card Container Styling */
.card-container {
    background-color: #FFF;
}

.vanity-card-container {
    background-color: #FFF;
}

/* End Card Container Styling */

/* Filter bar styling */
.popover-filter {
    min-width: 600px; /* Max Width of the popover */
}

#popover-basic {
    z-index: 2000;
}

.filter-bar {
    background-color: #E8E8E8;
}

.active-filter-bar {
    background-color: #F3F3F1;
}

.filter-bg-white {
    background-color: #F3F3F1;
}

.filter-title, .popover-title {
    background-color: #3D3B36 !important;
    color: #fef7fd;
}

.filter-title-text {
    font-size: 1.1rem;
    font-family: 'Inter', sans-serif;
    letter-spacing: .05rem;
}

.filter-body {
    min-width: 250px;
}

.filter-bar label {
    display: inline-flex;
    margin-right: 1em;
    height: 30px;
}

.filter-bar .custom-filter-input .rw-dropdown-list {
    display: inline-flex;
    min-width: 300px;
    max-width: 1200px;
    height: 20px;
}

.custom-inline-filter-input {
    width: 250px;
}

.filter-bar .custom-filter-input .form-control {
    height: 1.9em;
}

.filter-bar .custom-filter-input .rw-widget-input {
    max-height: 30px;
    /*max-width: 150px;*/
}

.inline-filter-input, .inline-filter-input .rw-widget-input {
    height: 31px;
    max-height: 31px;
}

.inline-filter-input .rw-dropdown-list-input, .inline-filter-input .rw-widget-picker {
    min-height: 31px;
    height: 31px;
    max-height: 31px;
}

.inline-filter-input .rw-widget-picker .rw-dropdown-list-value {
    margin-top: 4px;
}

/* End filter bar styling */

/* Filter Container Styling */
.filter-container, .screen-container {
    border-radius: 0.5rem;
    overflow-x: hidden;
    letter-spacing: .01rem;
}

.container-border {
    border: 1px solid #DFDFDF;
    border-collapse: collapse;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
}

.filter-container-no-border {
    border: 0;
}

.filter-container .content-block-header {
    background-color: #E6E5E3;
    color: #3D3B36;
}

.filter-container .title-text-header {
    font-size: 1rem;
}

.filter-container .content-block-body {
    background-color: #E6E5E3;
    min-height: 150px;
}

.filter-container .content-block-footer {
    border-top: 5px solid #B1AEA7;
    background-color: #7A756C;
    padding-top: 1em;
    height: 1.5em;
}

.filter-container .selected {
    background-color: #453191;
    color: #fff;
}

.filter-container .even-row {
    background-color: rgba(0, 0, 0, .05);
    cursor: pointer;
}

.filter-container .odd-row .selected {
    background: #6153A5;
}

.filter-container .even-row:hover {
    background-color: #1578dc1f;
}

.filter-container .odd-row {
    background-color: #fff;
    cursor: pointer;
}

.filter-container .odd-row:hover {
    background-color: #1578dc1f;
}

.filter-container .footer {
    background-color: #1578dc1f;
    padding-top: 1em;
    height: 2em;
}

/*Popover Styling*/

.popover-title {
    background-color: #4D4283;
    border-bottom: 1px solid #46415C;
    color: #fff;
    vertical-align: middle;
    white-space: nowrap;
}


.owner-popover {
    min-width: 500px;
}

.success-toast {
    background-color: #FFF;
    color: #000000;
    border: 2px solid green;
    border-left: 8px solid green;
    padding: 2px;
    z-index: 3000;
    width: 775px;
}

.error-toast {
    background-color: #FFF;
    color: #000000;
    border: 2px solid #dc3545;
    border-left: 8px solid #dc3545;
    font-size: 15px;
    width: 775px;
    z-index: 3000;
}

.information-toast {
    background-color: #FFF;
    color: #000000;
    border: 2px solid #1989F9;
    border-left: 8px solid #1989F9;
    padding: 1px;
    width: 775px;
    z-index: 3000;
}

.information-toast-close-button {
    color: #1989F9;
}
/* ... */

